--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dnspython==2.7.0
 filelock==3.19.1
 Flask==3.1.2
 fonttools==4.59.2
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
